[package]
name = "ff"
version = "0.1.0"
edition = "2021"

[dependencies]
battery = "0.7.8"
chrono = "0.4.39"
crossterm = "0.28.1"
lazy_static = "1.5.0"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
sysinfo = "0.33.1"
unicode-width = "0.2.0"
winapi = { version = "0.3.9", features = ["sysinfoapi", "minwinbase"] }
winreg = "0.55.0"
wmi = "0.15.0"
